# tp_advanced_cpp_project

./: .gitignore  CMakeLists.txt  readme.md
example/: CMakeLists.txt  main.cpp
example/async/: CMakeLists.txt  main.cpp
example/file/: CMakeLists.txt  main.cpp
example/http/: CMakeLists.txt  main.cpp
example/logger/: CMakeLists.txt  main.cpp
example/process/: CMakeLists.txt  main.cpp
example/shmem/: CMakeLists.txt  main.cpp
example/tcp/: CMakeLists.txt  main.cpp
include/coroutine/: coroutine.h
include/file/: DbData.hpp  DbServer.hpp  Index.hpp  MmapArray.hpp  MmapFile.hpp
include/http/: ClientState.hpp  Fd.hpp  HTTP.hpp  Server.hpp  Worker.hpp  fd.hpp
include/logger/: BaseLogger.hpp  FileLogger.hpp  Logger.hpp  StderrLogger.hpp  StdoutLogger.hpp
include/process/: Process.hpp  exec_utils.hpp  pipe.hpp
include/shmem/: SemaphoreMutex.hpp  Shmem.hpp  ShmemAllocator.hpp  ShmemMap.hpp
include/tcp/: AsyncConnection.hpp  AsyncServer.hpp  Connection.hpp  Server.hpp  connection_state.hpp  connection_utils.hpp
src/: CMakeLists.txt  main.cpp  test.cpp
src/coroutine/: CMakeLists.txt  coroutine.cpp
src/file/: CMakeLists.txt  DbServer.cpp  Index.cpp  MmapFile.cpp
src/http/: CMakeLists.txt  ClientState.cpp  Fd.cpp  HTTP.cpp  Server.cpp  Worker.cpp  fd.cpp  tmp.cpp
src/logger/: BaseLogger.cpp  CMakeLists.txt  FileLogger.cpp  Logger.cpp  StderrLogger.cpp  StdoutLogger.cpp
src/process/: CMakeLists.txt  Pipe.hpp  Process.cpp  Process.hpp  exec_utils.cpp  pipe.cpp
src/shmem/: CMakeLists.txt  (+1 more)
test/: CMakeLists.txt  echo.cpp  generate.cpp  test.cpp
(+7 files in other folders)
